# Racernix

./: LICENSE  README.md  pyproject.toml
racernix/model/: racernix_model.py
racernix/tests/: test_racernix_model.py
